Monitoring/otel-collector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-prometheus
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: opentelemetry-collector
  ports:
    - protocol: TCP
      port: 4317
      targetPort: 4317
      name: otlp-grpc
    - protocol: TCP
      port: 4318
      targetPort: 4318
      name: otlp-http
    - protocol: TCP
      port: 8889
      targetPort: 8889
      name: prometheus-metrics
