Monitoring/otel-own-metric-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-telemetry
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: opentelemetry-collector
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  type: ClusterIP
