Monitoring/otel-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-external-metrics
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: opentelemetry-collector
  ports:
    - protocol: TCP
      port: 8889
      targetPort: 8889
      type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-internal-metrics
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: opentelemetry-collector
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  type: ClusterIP
