Monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ozangrafana.domain.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: dashboard-auth
          namespace: default
  tls:
    secretName: mydomain-tls
